adding new filel paths

--- a/comparison.html
+++ b/comparison.html
@@ -56,14 +56,14 @@
             <div class = col-md-6 align = "center">
               <h5>vs. Max Temperature</h5>
                 <a href="Max_temp.html">
-                <img src="../Instructions/Resources/assets/images/Fig1.png" alt="Max temp" width = "75%">
+                <img src="Resources/assets/images/Fig1.png" alt="Max temp" width = "75%">
                 </a>
             </div>
             <br>
             <div class = col-md-6 align = "center">
               <h5>vs. Humidity</h5>
                 <a href="humidity.html">
-                <img src="../Instructions/Resources/assets/images/Fig2.png" alt="Humidity" width = "75%">
+                <img src="Resources/assets/images/Fig2.png" alt="Humidity" width = "75%">
                 </a>
             </div>
         </div>
@@ -72,13 +72,13 @@
             <div class = col-md-6 align = "center">
               <h5>vs. Cloudiness</h5>
                 <a href="cloudiness.html">
-                <img src="../Instructions/Resources/assets/images/Fig3.png" alt="Cloudiness" width = "75%">
+                <img src="Resources/assets/images/Fig3.png" alt="Cloudiness" width = "75%">
                 </a>
             </div>
             <div class = col-md-6 align = "center">
               <h5>vs. Wind Speed</h5>
                 <a href="windspeed.html">
-                <img src="../Instructions/Resources/assets/images/Fig4.png" alt="Wind Speed" width = "75%">
+                <img src="Resources/assets/images/Fig4.png" alt="Wind Speed" width = "75%">
                 </a>
             </div>
         </div>
