--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <div class = "col-md-6">
                 <hr>
                 <a href="index.html">
-                <img src="../Instructions/Resources/assets/images/Fig1.png" alt="Mat Temp" width = "100%">
+                <img src="Resources/assets/images/Fig1.png" alt="Mat Temp" width = "100%">
                 </a>
                 </div>
                 <div class = "col-md-6">
@@ -72,12 +72,12 @@
             <div class = "row">
               <div class = "col-md-6">
                 <a  href="Max_temp.html">
-                  <img src="../Instructions/Resources/assets/images/Fig1.png" alt="Max_Temp" width = "100%">
+                  <img src="Resources/assets/images/Fig1.png" alt="Max_Temp" width = "100%">
                </a>
               </div>
              <div class = "col-md-6">
                 <a href="humidity.html">
-                  <img src="../Instructions/Resources/assets/images/Fig2.png" alt="Humidty" width = "100%">
+                  <img src="Resources/assets/images/Fig2.png" alt="Humidty" width = "100%">
                 </a>
             </div>
           </div>
@@ -85,12 +85,12 @@
           <div class = "row">
             <div class = "col-md-6">
               <a href="cloudiness.html">
-                <img src="../Instructions/Resources/assets/images/Fig3.png" alt="Cloudiness" width = "100%">
+                <img src="Resources/assets/images/Fig3.png" alt="Cloudiness" width = "100%">
              </a>
             </div>
            <div class = "col-md-6">
               <a href="windspeed.html">
-                <img src="../Instructions/Resources/assets/images/Fig4.png" alt="Windspeed" width = "100%">
+                <img src="Resources/assets/images/Fig4.png" alt="Windspeed" width = "100%">
               </a>
           </div>
         </div>
