--- a/windspeed.html
+++ b/windspeed.html
@@ -50,7 +50,7 @@
             <h2>Windspeed</h2>
             <hr>
             <a href="windspeed.html">
-              <img src="../Instructions/Resources/assets/images/Fig3.png" alt="Wind Speed" width = "85%">
+              <img src="Resources/assets/images/Fig3.png" alt="Wind Speed" width = "85%">
             </a>
             <br>
             <br>
@@ -64,12 +64,12 @@
             <div class = "row">
               <div class = "col-md-6">
                 <a href="Max_temp.html">
-                  <img src="../Instructions/Resources/assets/images/Fig1.png" alt="Max Temp" width = "100%">
+                  <img src="Resources/assets/images/Fig1.png" alt="Max Temp" width = "100%">
                </a>
               </div>
              <div class = "col-md-6">
                 <a href="humidity.html">
-                  <img src="../Instructions/Resources/assets/images/Fig2.png" alt="Humidty" width = "100%">
+                  <img src="Resources/assets/images/Fig2.png" alt="Humidty" width = "100%">
                 </a>
             </div>
           </div>
@@ -77,12 +77,12 @@
           <div class = "row">
             <div class = "col-md-6">
               <a href="cloudiness.html">
-                <img src="../Instructions/Resources/assets/images/Fig3.png" alt="Cloudiness" width = "100%">
+                <img src="Resources/assets/images/Fig3.png" alt="Cloudiness" width = "100%">
              </a>
             </div>
            <div class = "col-md-6">
               <a href="windspeed.html">
-                <img src="../Instructions/Resources/assets/images/Fig4.png" alt="Wind Speed" width = "100%" style="border:3px solid rgb(28, 20, 148)">
+                <img src="Resources/assets/images/Fig4.png" alt="Wind Speed" width = "100%" style="border:3px solid rgb(28, 20, 148)">
               </a>
           </div>
         </div>
