updating html files

--- a/comparison_test1.html
+++ b/comparison_test1.html
@@ -44,39 +44,49 @@
     <br>
     <br>
     <div class = "row">
-      <div class= col-md-1></div>
-      <div class = "col-md-6">
-          <div class="box-container" style = "background-color: #e3f2fd;" align = "center">
-            <h2>Humidity</h2>
-            <hr>
-            <a href="humidity.html">
-              <img src="Resources/assets/images/Fig2.png" alt="Humidity" width = "85%">
-            </a>
+    <div class = "col-md-2"></div>
+    <div class = "col-md-8">
+    <div class="box-container" style = "background-color: #e3f2fd; padding:20px">
+        <h2>Comparison: Latitude Vs. X</h2>
+        <hr>
+        <p>click on any plot to get an in-dept analysis</p>
+        <div class = "row">
+          <div class = "col-md=1"></div>
+        <div class = "row">
+            <div class = col-md-6 align = "center">
+              <h5>vs. Max Temperature</h5>
+                <a href="Max_temp.html">
+                <img src="Resources/assets/images/Fig1.png" alt="Max temp" width = "75%">
+                </a>
+            </div>
             <br>
-            <br>
-            <p> As expected, the weather becomes significantly warmer as one approaches the equator (0 Deg. Latitude). More interestingly, however, is the fact that the southern hemisphere tends to be warmer this time of year than the northern hemisphere. This may be due to the tilt of the earth at the time of year this data was gathered. </p>
-          </div>
-      </div>  
-      <div class = col-md-3>
-        <div class="box-container" style = "background-color: #e3f2fd; padding: 10px">
-          <h3>Visualizations </h3>
-          <hr>
-              <a  href="Max_temp.html">
-                <img src="Resources/assets/images/Fig1.png" id = pad alt="Max_Temp" width = "49%">
-             </a>
-              <a href="humidity.html">
-                <img src="Resources/assets/images/Fig2.png" id = pad alt="Humidty" width = "49%" style="border:3px solid rgb(28, 20, 148)">
-              </a>
-        <br>
-            <a href="cloudiness.html">
-              <img src="Resources/assets/images/Fig3.png" alt="Cloudiness" id = pad width = "49%">
-           </a>
-            <a href="windspeed.html">
-              <img src="Resources/assets/images/Fig4.png" alt="Windspeed" id = pad width = "49%">
-            </a>
-      
+            <div class = col-md-6 align = "center">
+              <h5>vs. Humidity</h5>
+                <a href="humidity.html">
+                <img src="Resources/assets/images/Fig2.png" alt="Humidity" width = "75%">
+                </a>
+            </div>
         </div>
+        <br>
+        <div class = "row">
+            <div class = col-md-6 align = "center">
+              <h5>vs. Cloudiness</h5>
+                <a href="cloudiness.html">
+                <img src="Resources/assets/images/Fig3.png" alt="Cloudiness" width = "75%">
+                </a>
+            </div>
+            <div class = col-md-6 align = "center">
+              <h5>vs. Wind Speed</h5>
+                <a href="windspeed.html">
+                <img src="Resources/assets/images/Fig4.png" alt="Wind Speed" width = "75%">
+                </a>
+            </div>
+        </div>
+      </div>
     </div>
+    </div>
+      
+
   </body>
 
 
@@ -94,3 +104,4 @@
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     </body>
   </html>
+  
