--- a/windspeed.html
+++ b/windspeed.html
@@ -57,38 +57,26 @@
             <p> As expected, the weather becomes significantly warmer as one approaches the equator (0 Deg. Latitude). More interestingly, however, is the fact that the southern hemisphere tends to be warmer this time of year than the northern hemisphere. This may be due to the tilt of the earth at the time of year this data was gathered. </p>
           </div>
       </div>  
-        <div class = col-md-3>
-          <div class="box-container" style = "background-color: #e3f2fd; padding: 10px" align = "center">
-            <h3>Visualizations </h3>
-            <hr>
-            <div class = "row">
-              <div class = "col-md-6">
-                <a href="Max_temp.html">
-                  <img src="Resources/assets/images/Fig1.png" alt="Max Temp" width = "100%">
-               </a>
-              </div>
-             <div class = "col-md-6">
-                <a href="humidity.html">
-                  <img src="Resources/assets/images/Fig2.png" alt="Humidty" width = "100%">
-                </a>
-            </div>
-          </div>
-          <br>
-          <div class = "row">
-            <div class = "col-md-6">
-              <a href="cloudiness.html">
-                <img src="Resources/assets/images/Fig3.png" alt="Cloudiness" width = "100%">
+      <div class = col-md-3>
+        <div class="box-container" style = "background-color: #e3f2fd; padding: 10px">
+          <h3>Visualizations </h3>
+          <hr>
+              <a  href="Max_temp.html">
+                <img src="Resources/assets/images/Fig1.png" id = pad alt="Max_Temp" width = "49%" >
              </a>
-            </div>
-           <div class = "col-md-6">
-              <a href="windspeed.html">
-                <img src="Resources/assets/images/Fig4.png" alt="Wind Speed" width = "100%" style="border:3px solid rgb(28, 20, 148)">
+              <a href="humidity.html">
+                <img src="Resources/assets/images/Fig2.png" id = pad alt="Humidty" width = "49%">
               </a>
-          </div>
+        <br>
+            <a href="cloudiness.html">
+              <img src="Resources/assets/images/Fig3.png" alt="Cloudiness" id = pad width = "49%" >
+           </a>
+            <a href="windspeed.html">
+              <img src="Resources/assets/images/Fig4.png" alt="Windspeed" id = pad width = "49%" style="border:3px solid rgb(28, 20, 148)">
+            </a>
+      
         </div>
-        
-          </div>
-      </div>
+    </div>
   </body>
 
 
