--- a/index.html
+++ b/index.html
@@ -46,54 +46,34 @@
     <div class = "row">
       <div class = "col-md-1"></div>
       <div class = "col-md-6">
-          <div class="box-container" style = "background-color: #e3f2fd; padding:10px">
+      <div class="box-container" style = "background-color: #e3f2fd; padding:10px">
             <h2>Summary: Latitude vs. X</h2>
-            <div class = "row">
-                <div class = "col-md-6">
                 <hr>
                 <a href="index.html">
-                <img src="Resources/assets/images/Fig1.png" alt="Mat Temp" width = "100%">
+                <img src="Resources/assets/images/Fig1.png" class = "float-left" alt="Mat Temp" width = "50%">
                 </a>
-                </div>
-                <div class = "col-md-6">
                     <hr>
                     <p>The purpose of this project was to analyze how weather changes as you get close to the equator. To accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on on over 500 cities.</p>
-                    <p>After assembling the dataset, we used matplotlib to plot various aspects of the weather vs. latitude. Factors we looked</p>
-                </div>
-            </div>
-            <p>at included: temperature, cloudiness, wind speed, and humidty. This site provides the source data and visualizations created as part of the analysis, as well as explanations and descipitions of any trends and correlations witnessed</p>
-            
+                    <p>After assembling the dataset, we used matplotlib to plot various aspects of the weather vs. latitude. Factors we looked at included: temperature, cloudiness, wind speed, and humidty. This site provides the source data and visualizations created as part of the analysis, as well as explanations and descipitions of any trends and correlations witnessed</p>
         </div>
       </div>  
         <div class = col-md-3>
           <div class="box-container" style = "background-color: #e3f2fd; padding: 10px">
             <h3>Visualizations </h3>
             <hr>
-            <div class = "row">
-              <div class = "col-md-6">
                 <a  href="Max_temp.html">
-                  <img src="Resources/assets/images/Fig1.png" alt="Max_Temp" width = "100%">
+                  <img src="Resources/assets/images/Fig1.png" id = pad alt="Max_Temp" width = "49%">
                </a>
-              </div>
-             <div class = "col-md-6">
                 <a href="humidity.html">
-                  <img src="Resources/assets/images/Fig2.png" alt="Humidty" width = "100%">
+                  <img src="Resources/assets/images/Fig2.png" id = pad alt="Humidty" width = "49%">
                 </a>
-            </div>
-          </div>
           <br>
-          <div class = "row">
-            <div class = "col-md-6">
               <a href="cloudiness.html">
-                <img src="Resources/assets/images/Fig3.png" alt="Cloudiness" width = "100%">
+                <img src="Resources/assets/images/Fig3.png" alt="Cloudiness" id = pad width = "49%">
              </a>
-            </div>
-           <div class = "col-md-6">
               <a href="windspeed.html">
-                <img src="Resources/assets/images/Fig4.png" alt="Windspeed" width = "100%">
+                <img src="Resources/assets/images/Fig4.png" alt="Windspeed" id = pad width = "49%">
               </a>
-          </div>
-        </div>
         
           </div>
       </div>
