updating html files

--- a/Max_temp.html
+++ b/Max_temp.html
@@ -54,7 +54,7 @@
             </a>
             <br>
             <br>
-            <p> As expected, the weather becomes significantly warmer as one approaches the equator (0 Deg. Latitude). More interestingly, however, is the fact that the southern hemisphere tends to be warmer this time of year than the northern hemisphere. This may be due to the tilt of the earth at the time of year this data was gathered. </p>
+            <p> For max temperature, we see that in the Northern Hemisphere there is a negative correlation between latitude and max temperature, while in the Southern Hemisphere we notice a positive relationship. This is to be expected as the temperature decreases for both hemispheres the farther from the equator you get.  </p>
           </div>
       </div>  
       <div class = col-md-3>
