--- a/cloudiness.html
+++ b/cloudiness.html
@@ -54,7 +54,7 @@
             </a>
             <br>
             <br>
-            <p> As expected, the weather becomes significantly warmer as one approaches the equator (0 Deg. Latitude). More interestingly, however, is the fact that the southern hemisphere tends to be warmer this time of year than the northern hemisphere. This may be due to the tilt of the earth at the time of year this data was gathered. </p>
+            <p> This plot shows that there is little to no correlation between latitude and cloudiness. On this particular day the average cloud coverage was 53% with a median of 59%. Its also interesting to note that 25% of the cities from the data set have a cloud coverage of 5% or less. </p>
           </div>
       </div>  
       <div class = col-md-3>
