--- a/humidity.html
+++ b/humidity.html
@@ -54,7 +54,7 @@
             </a>
             <br>
             <br>
-            <p> As expected, the weather becomes significantly warmer as one approaches the equator (0 Deg. Latitude). More interestingly, however, is the fact that the southern hemisphere tends to be warmer this time of year than the northern hemisphere. This may be due to the tilt of the earth at the time of year this data was gathered. </p>
+            <p> This plot shows that there is little to no correlation between latitude and humidity. I find this interesting as warm air holds more moisture than cool air, so I would assume that the plot would show the cities getting more humid the closer they got to the equator, but on this particular day there wasn’t much correlation. </p>
           </div>
       </div>  
       <div class = col-md-3>
