--- a/windspeed.html
+++ b/windspeed.html
@@ -50,11 +50,11 @@
             <h2>Windspeed</h2>
             <hr>
             <a href="windspeed.html">
-              <img src="Resources/assets/images/Fig3.png" alt="Wind Speed" width = "85%">
+              <img src="Resources/assets/images/Fig4.png" alt="Wind Speed" width = "85%">
             </a>
             <br>
             <br>
-            <p> As expected, the weather becomes significantly warmer as one approaches the equator (0 Deg. Latitude). More interestingly, however, is the fact that the southern hemisphere tends to be warmer this time of year than the northern hemisphere. This may be due to the tilt of the earth at the time of year this data was gathered. </p>
+            <p> This graph shows that there is little to no correlation between latitude and wind speed. The average wind speed amongst the data set was 8 mph while the max was 44 mph and the low was .30 mph</p>
           </div>
       </div>  
       <div class = col-md-3>
