--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
                 <a href="index.html">
                 <img src="Resources/assets/images/Fig1.png" class = "float-left" alt="Mat Temp" width = "50%">
                 </a>
-                    <p>The purpose of this project was to analyze how weather changes as you get close to the equator. To accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on on over 500 cities.</p>
-                    <p>After assembling the dataset, we used matplotlib to plot various aspects of the weather vs. latitude. Factors we looked at included: temperature, cloudiness, wind speed, and humidty. This site provides the source data and visualizations created as part of the analysis, as well as explanations and descipitions of any trends and correlations witnessed</p>
+                    <p>The Purpose of this project was to analyze how weather changes as you get closer to the equator. To do this we randomly selected over 500 cities by retrieving random latitudes and longitudes using numpy. We then made API calls to the OpenWeatherMap API to retrieve the pertinent data needed for the analysis and created a dataframe.</p>
+                    <p>Once we had our data set, we then used matplotlib to plot latitude against various weather factors. The weather factors that we retrieved from the API included temperature, cloudiness, wind speed, and humidity. This website includes the data that we used for our analysis, as well as the scatter plots created for each individual factor and a quick description of the trends and correlations witnessed. </p>
         </div>
       </div>  
         <div class = col-md-3>
