deleting unecessary files and modifying index.html

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <div class="box-container" style = "background-color: #e3f2fd; padding: 50px">
             <h2>Summary: Latitude vs. X</h2>
                 <hr>
-                <a href="index.html">
+                <a href="Max_temp.html">
                 <img src="Resources/assets/images/Fig1.png" class = "float-left" alt="Mat Temp" width = "50%">
                 </a>
                     <p>The Purpose of this project was to analyze how weather changes as you get closer to the equator. To do this we randomly selected over 500 cities by retrieving random latitudes and longitudes using numpy. We then made API calls to the OpenWeatherMap API to retrieve the pertinent data needed for the analysis and created a dataframe.</p>
